tests/baselines/reference/classWithOverloadImplementationOfWrongName.errors.txt
tests/cases/compiler/classWithOverloadImplementationOfWrongName.ts(4,5): error TS2389: Function implementation name must be 'foo'.


==== tests/cases/compiler/classWithOverloadImplementationOfWrongName.ts (1 errors) ====
    class C {
        foo(): string;
        foo(x): number;
        bar(x): any { }
        ~~~
!!! error TS2389: Function implementation name must be 'foo'.
    }